Validation indexing tests